<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization">

    <EditText
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="112dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/registration"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginBottom="90dp"
        android:minHeight="48dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginAuth"
        android:layout_width="63dp"
        android:layout_height="18dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:text="@string/logAuth"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/passwordAuth"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>